refactor: rename UserOnboarding to UserOnboard
